work on the games page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
         </ul>
         <hr style="color: #004E64">
         
-        <h2>Join our discord!</h2>
+        <h2><a href="https://discord.gg/kPRZEzBph7">Join our discord</a></h2>
+        <h2><a href="https://LowercaseText.itch.io">Itch.io page</a></h2>
         <p></p>
     </body>
 </html>
