work on the first game

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
             <li><h2><a href="games.html">Games</a></h2></li>
             <li><h2><a href="login.html">Login</a></h2></li>
         </ul>
+        </div>
         <hr style="color: #004E64">
         
         <h2><a href="https://discord.gg/kPRZEzBph7">Join our discord</a></h2>
