--- a/games/TheTriangle2/index.html
+++ b/games/TheTriangle2/index.html
@@ -2,50 +2,60 @@
 <html>
 <head>
   <title>My Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>My Game</h1>
-    <img src="logo.png" alt="Logo">
-      <link rel="stylesheet" href="style.css">
-  </header>
-    <div class="navigationbar">
-        <ul>
-            <li><h2><a href="index.html">Home</a></h2></li>
-            <li><h2><a href="about.html">About</a></h2></li>
-            <li><h2><a href="contact.html">Contact</a></h2></li>
-            <li><h2><a href="games.html">Games</a></h2></li>
-            <li><h2><a href="login.html">Login</a></h2></li>
-        </ul>
+      
+        <div class="center-panel">
+          <div class="content">
+            <img style="display: block; margin-left: auto; margin-right: auto;" src="TheTriangleBanner.png">
+            <section>
+              <h2>Description</h2>
+              <p>version beta 0.1. Web build  other platformscoming in full release</p>
+              <p>Welcome to The Triangle. The game is just a triangle that can shoot. There are enemies (magenta circles) that try to kill you. You want to kill them. Once You've killed all the enemies, go touch the red rectangle. It will take you to the next room. Every Room has one more enemy than the previous one.</p>
+              <p>Controls</p>
+              <ul><li>WASD to move</li><li>Space or LMB to shoot</li><li>F1 to mute the music (in case you don't like it.)</li></ul>
+              <p>This game is in development; Here's some things that will be added in the full game:</p>
+              <ul>
+                <li>Upgrades such as firerate, damage, bullet amount, bullet speed, bullet accuracy, and others</li>
+                <li>High scores and a global leaderboard</li>
+                <li>More enemies</li>
+                <li>Boss fights</li>
+                <li>More rooms</li>
+                <li>Power-Ups</li>
+                <li>2 player split-screen mode!</li>
+                <li>Different game modes (Such as ones where there's more enemies or the player moves differently, and others.)</li>
+              </ul>
+              <h2>Features</h2>
+              <ul>
+                <li>Intuitive controls</li>
+                <li>Beautiful graphics</li>
+                <li>Challenging levels</li>
+              </ul>
+            </section>
+            <section>
+              <h2>Screenshots</h2>
+              <img src="screenshot1.png" alt="Screenshot 1"><br>
+              <img src="screenshot2.png" alt="Screenshot 2"><br>
+              <img src="screenshot3.png" alt="Screenshot 3"><br>
+            </section>
+            <section>
+              <h2>Trailer</h2>
+              <video src="trailer.mp4" controls></video>
+            </section>
+            <section>
+              <h2>Play</h2>
+              <button>Download</button>
+              <p>or</p>
+              <h3><a href="game.html"">Play in browser</a></h3>
+            </section>
+            
+          </div>
         </div>
-  <section>
-    <h2>Description</h2>
-    <p>My game is a fun and exciting adventure game.</p>
-    <h2>Features</h2>
-    <ul>
-      <li>Intuitive controls</li>
-      <li>Beautiful graphics</li>
-      <li>Challenging levels</li>
-    </ul>
-  </section>
-  <section>
-    <h2>Screenshots</h2>
-    <img src="screenshot1.png" alt="Screenshot 1">
-    <img src="screenshot2.png" alt="Screenshot 2">
-    <img src="screenshot3.png" alt="Screenshot 3">
-  </section>
-  <section>
-    <h2>Trailer</h2>
-    <video src="trailer.mp4" controls></video>
-  </section>
-  <section>
-    <h2>Download</h2>
-    <button>Download</button>
-  </section>
-  <footer>
-    <p>Developed by John Doe </p>
-      <br>
-    <p> Contact: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
-  </footer>
+        <footer>
+          <p>Developed by LowercaseText & Sl33t4nt </p>
+            <br>
+          <p> Contact: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
+        </footer>
 </body>
 </html>
