--- a/about.html
+++ b/about.html
@@ -14,18 +14,28 @@
     </div>
         
     <div class="navigationbar">
+
         <ul>
-            <li><h2><a href="index.html">Home</a></h2></li>
+            <li><h2><a href="index.html">Home</a></h2></li> 
             <li><h2><a href="about.html">About</a></h2></li>
-            <li><h2><a href="contact.html">Contact</a></h2></li>
             <li><h2><a href="games.html">Games</a></h2></li>
-            <li><h2><a href="login.html">Login</a></h2></li>
+            <li><h2><a href="blog.html">Blog</a></h2></li>  
+            <li><h2><a href="other.html">Other cool stuff</a></h2></li>  
         </ul>
-        </div>
-        <hr style="color: #004E64">
+    </div>
+    <hr style="color: #004E64">
+    <div style="padding-left:4%; border-left-style: solid;
+    border-left-color: #004E64; border-left-width: 10px">
+
         
-        <h2><a href="https://discord.gg/kPRZEzBph7">Join our discord</a></h2>
-        <h2><a href="https://LowercaseText.itch.io">Itch.io page</a></h2>
+        <p>helo. I'm lowercasetext. I like a lot of different things.  </p>
+        <p>I like programming. I make games with Godot, Raylib, and Gamemaker studio 2</p>
+        <p>I like video games. I play a lot of Cities skylines, Geometry dash, and Teardown</p>
+
+        <h3>Links</h3>
+        <p><a href="https://discord.gg/kPRZEzBph7">Join our discord</a></p>
+        <p><a href="https://LowercaseText.itch.io">Itch.io page</a></p>
         <p></p>
+        </div>
     </body>
 </html>
