--- a/games.html
+++ b/games.html
@@ -15,13 +15,15 @@
     
 
     <div class="navigationbar">
+        <div class="navigationbar">
         <ul>
-            <li><h2><a href="index.html">Home</a></h2></li>
+            <li><h2><a href="index.html">Home</a></h2></li> 
             <li><h2><a href="about.html">About</a></h2></li>
-            <li><h2><a href="contact.html">Contact</a></h2></li>
             <li><h2><a href="games.html">Games</a></h2></li>
-            <li><h2><a href="login.html">Login</a></h2></li>
+            <li><h2><a href="blog.html">Blog</a></h2></li>  
+            <li><h2><a href="other.html">Other cool stuff</a></h2></li>  
         </ul>
+    </div>
         </div>
         <hr>
         <p></p>
