Finish games page
I removed the game files, because I can use itch.io for embeding the game and for download. I added Stickman Hesit and the triangle 2 to the games page. adding more games soon

--- a/About/index.html
+++ b/About/index.html
@@ -42,6 +42,15 @@
         <p>my favorite foods are any eastern european food, any fast food and spaghetti.</p>
 
     </article>
+    <article>
+        <h1>About me</h1>
+        <p>helo. I am LowercaseText. I like a lot of different things.</p>
+        <p>I like programming and playing video games.</p>
+        <p>I code with Raylib, Godot, and Gamemaker Studio 2.
+            I like playing Cities Skylines and Geometry Dash, although I play many other games. </p>
+        <p>my favorite foods are any eastern european food, any fast food and spaghetti.</p>
+
+    </article>
 </section>
 
 
