--- a/Games/TheTriangle2/index.html
+++ b/Games/TheTriangle2/index.html
@@ -29,7 +29,7 @@
               <p>Controls</p>
               <ul><li>WASD to move</li><li>Space or LMB to shoot</li><li>F1 to mute the music (in case you don't like it.)</li></ul>
               <p>This game is in development; Here's some things that will be added in the full game:</p>
-              <ul>
+              <ol>
                 <li>Upgrades such as firerate, damage, bullet amount, bullet speed, bullet accuracy, and others</li>
                 <li>High scores and a global leaderboard</li>
                 <li>More enemies</li>
@@ -38,27 +38,19 @@
                 <li>Power-Ups</li>
                 <li>2 player split-screen mode!</li>
                 <li>Different game modes (Such as ones where there's more enemies or the player moves differently, and others.)</li>
-              </ul>
+              </ol>
               <h2>Features</h2>
               <ul>
-                <li>Intuitive controls</li>
-                <li>Beautiful graphics</li>
-                <li>Challenging levels</li>
+                <li>triangle</li>
+                <li>fat circles</li>
+                <li>stuff</li>
               </ul>
             </section>
-            <section>
-              <h2>Screenshots</h2>
-              <img src="screenshot1.png" alt="Screenshot 1"><br>
-              <img src="screenshot2.png" alt="Screenshot 2"><br>
-              <img src="screenshot3.png" alt="Screenshot 3"><br>
-            </section>
-            <section>
-              <h2>Trailer</h2>
-              <video src="trailer.mp4" controls></video>
-            </section>
+
             <section>
               <h2>Play</h2>
-
+                <h3>Download on itch.io</h3>
+                <iframe frameborder="0" src="https://itch.io/embed/1709422?bg_color=fcf6b1&amp;fg_color=F7B32B&amp;link_color=F72C25&amp;border_color=2D1E2F" width="552" height="167"><a href="https://lowercasetext.itch.io/the-triangle-2">The Triangle 2 by LowercaseText</a></iframe>
 
             </section>
             
