--- a/Games/index.html
+++ b/Games/index.html
@@ -1,164 +1,143 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+  <head>
+    <style>
+      * {
+        box-sizing: border-box;
+        }
 
-    body {
-      font-family: Arial;
-      padding: 10px;
-      background: #f1f1f1;
-    }
+      body {
+        font-family: Arial;
+        padding: 10px;
+        background: #5BC0EB;
+        color: #404E4D;
 
-    /* Header/Blog Title */
-    .header {
-      padding: 30px;
-      text-align: center;
-      background: white;
-    }
+      }
 
-    .header h1 {
-      font-size: 50px;
-    }
 
-    /* Style the top navigation bar */
-    .topnav {
-      overflow: hidden;
-      background-color: #333;
-    }
 
-    /* Style the topnav links */
-    .topnav a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-
-    /* Change color on hover */
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    /* Create two unequal columns that floats next to each other */
-    /* Left column */
-    .leftcolumn {
-      float: left;
-      width: 75%;
-    }
-
-    /* Right column */
-    .rightcolumn {
-      float: left;
-      width: 25%;
-      background-color: #f1f1f1;
-      padding-left: 20px;
-    }
-
-    /* Fake image */
-    .fakeimg {
-      background-color: #aaa;
-      width: 100%;
-      padding: 20px;
-    }
-
-    /* Add a card effect for articles */
-    .card {
-      background-color: white;
-      padding: 20px;
-      margin-top: 20px;
-    }
-
-    /* Clear floats after the columns */
-    .row::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-
-    /* Footer */
-    .footer {
-      padding: 20px;
-      text-align: center;
-      background: #ddd;
-      margin-top: 20px;
-    }
-
-    /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-    @media screen and (max-width: 800px) {
-      .leftcolumn, .rightcolumn {
+      /* Style the header */
+      header {
+        background-color: #404E4D;
+        padding: 30px;
+        text-align: center;
+        font-size: 35px;
+        color: white;
         width: 100%;
+      }
+      header ul {
+        list-style-type: none;
+        margin: 0;
         padding: 0;
+        overflow: hidden;
+        background-color: #404E4D;
       }
-    }
 
-    /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-    @media screen and (max-width: 400px) {
-      .topnav a {
-        float: none;
-        width: 100%;
+      header li {
+        float: left;
       }
-    }
-  </style>
-</head>
-<body>
 
-<div class="header">
-  <h1>LowercaseText</h1>
-  <p>games</p>
-</div>
+      header li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" style="float:right">Link</a>
-</div>
 
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>The Triangle 2</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-    <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      /* Create two unequal columns that floats next to each other */
+      /* Left column */
+      .Column {
+        margin: auto;
+        width: 30%;
+      }
+
+      .image {
+        background-color: #FDE74C;
+        padding: 2px;
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: auto;
+        height:500px;
+        box-sizing: border-box;
+      }
+      img
+      {
+        border-radius: 8px;
+        display: block; margin: auto;
+        border: 3px solid #404E4D;
+      }
+
+      /* Add a card effect for articles */
+      .card {
+        background-color: #FDE74C;
+        padding: 20px;
+        margin-top: 20px;
+        border: 3px solid #404E4D;
+      }
+
+      /* Clear floats after the columns */
+      .row::after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+
+      /* Footer */
+      .footer {
+        padding: 20px;
+        text-align: center;
+        background: #404E4D;
+        color: white;
+        margin-top: 20px;
+      }
+
+      /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+      @media screen and (max-width: 800px) {
+        .Column {
+          width: 100%;
+          padding: 0;
+        }
+      }
+    </style>
+  </head>
+  <body>
+
+
+
+    <header>
+      <h2>LowercaseText</h2>
+      <p>games</p>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Blog/index.html">Blog</a></li>
+        <li><a href="../Games/index.html">Games</a></li>
+        <li><a href="../Other/index.html">Other</a></li>
+      <li><a href="../About/index.html">About</a></li>
+      </ul>
+    </header>
+
+    <div class="row">
+      <div class="Column">
+        <a href="TheTriangle2/index.html" style="text-decoration:none; color: inherit;"><div class="card">
+          <h2>The Triangle 2</h2>
+          <h5>version 0.1</h5>
+          <div class="image" ><img src="TheTriangle2\TheTriangleCover.png" ></div>
+
+        </div></a>
+
+        <a href="TheTriangle2/index.html" style="text-decoration:none; color: inherit;"><div class="card">
+          <h2>Stickman Heist</h2>
+          <h5></h5>
+        <div class="image" ><img src="StickmanHeist\Banner.png" ></div>
+
+        </div></a>
     </div>
   </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-    </div>
-    <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
-    </div>
+  <div class="footer">
+    <h2>Made by lowercasetext</h2>
   </div>
-</div>
-
-<div class="footer">
-  <h2>Made by lowercasetext</h2>
-</div>
-
-</body>
+  </body>
 </html>
