--- a/Games/index.html
+++ b/Games/index.html
@@ -1,143 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      * {
-        box-sizing: border-box;
-        }
-
-      body {
-        font-family: Arial;
-        padding: 10px;
-        background: #5BC0EB;
-        color: #404E4D;
-
-      }
+<head>
+  <title>My Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 
 
 
-      /* Style the header */
-      header {
-        background-color: #404E4D;
-        padding: 30px;
-        text-align: center;
-        font-size: 35px;
-        color: white;
-        width: 100%;
-      }
-      header ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #404E4D;
-      }
-
-      header li {
-        float: left;
-      }
-
-      header li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-
-      /* Create two unequal columns that floats next to each other */
-      /* Left column */
-      .Column {
-        margin: auto;
-        width: 30%;
-      }
-
-      .image {
-        background-color: #FDE74C;
-        padding: 2px;
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: auto;
-        height:500px;
-        box-sizing: border-box;
-      }
-      img
-      {
-        border-radius: 8px;
-        display: block; margin: auto;
-        border: 3px solid #404E4D;
-      }
-
-      /* Add a card effect for articles */
-      .card {
-        background-color: #FDE74C;
-        padding: 20px;
-        margin-top: 20px;
-        border: 3px solid #404E4D;
-      }
-
-      /* Clear floats after the columns */
-      .row::after {
-        content: "";
-        display: table;
-        clear: both;
-      }
-
-      /* Footer */
-      .footer {
-        padding: 20px;
-        text-align: center;
-        background: #404E4D;
-        color: white;
-        margin-top: 20px;
-      }
-
-      /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-      @media screen and (max-width: 800px) {
-        .Column {
-          width: 100%;
-          padding: 0;
-        }
-      }
-    </style>
-  </head>
-  <body>
+</head>
+<body>
 
 
 
-    <header>
-      <h2>LowercaseText</h2>
-      <p>games</p>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Blog/index.html">Blog</a></li>
-        <li><a href="../Games/index.html">Games</a></li>
-        <li><a href="../Other/index.html">Other</a></li>
-      <li><a href="../About/index.html">About</a></li>
-      </ul>
-    </header>
+<header>
+  <h2>LowercaseText</h2>
+  <p>about me</p>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="../Blog/index.html">Blog</a></li>
+    <li><a href="../Games/index.html">Games</a></li>
+    <li><a href="../Other/index.html">Other</a></li>
+    <li><a href="../About/index.html">About</a></li>
+  </ul>
+</header>
+<br>
+<section>
+  <nav>
+    <ul>
+      <li>idk what to put here</li>
 
-    <div class="row">
-      <div class="Column">
-        <a href="TheTriangle2/index.html" style="text-decoration:none; color: inherit;"><div class="card">
-          <h2>The Triangle 2</h2>
-          <h5>version 0.1</h5>
-          <div class="image" ><img src="TheTriangle2\TheTriangleCover.png" ></div>
+    </ul>
+  </nav>
 
-        </div></a>
+  <a href="TheTriangle2/index.html"><article>
+    <h1>The Triangle 2</h1>
+    <p>this is some random game about a triangle that shoots <i>balls</i>.</p>
 
-        <a href="TheTriangle2/index.html" style="text-decoration:none; color: inherit;"><div class="card">
-          <h2>Stickman Heist</h2>
-          <h5></h5>
-        <div class="image" ><img src="StickmanHeist\Banner.png" ></div>
 
-        </div></a>
-    </div>
-  </div>
-  <div class="footer">
-    <h2>Made by lowercasetext</h2>
-  </div>
-  </body>
+  </article>
+  </a>
+  <br>
+  <br>
+  <article>
+
+
+  </article>
+</section>
+
+
+
+</body>
 </html>
