--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <header>
     <h2>LowercaseText</h2>
+    <p>home (this page is useless)</p>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Blog/index.html">Blog</a></li>
@@ -35,6 +36,28 @@
         <h1>Welcome to LowercaseText</h1>
         <p>Welcome to my website. I am lowercasetext.</p>
         <a href="About/index.html">check my about me page</a>
+        <br>
+        <br>
+        <br>
+        <a>so like yeah. I like cheese</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>cheese</p>
 
     </article>
 </section>
