--- a/About/index.html
+++ b/About/index.html
@@ -41,16 +41,16 @@
         I like playing Cities Skylines and Geometry Dash, although I play many other games. </p>
         <p>my favorite foods are any eastern european food, any fast food and spaghetti.</p>
 
-    </article>
-    <article>
-        <h1>About me</h1>
-        <p>helo. I am LowercaseText. I like a lot of different things.</p>
-        <p>I like programming and playing video games.</p>
-        <p>I code with Raylib, Godot, and Gamemaker Studio 2.
-            I like playing Cities Skylines and Geometry Dash, although I play many other games. </p>
-        <p>my favorite foods are any eastern european food, any fast food and spaghetti.</p>
+        <p>Contact me</p>
+        <p><a href="https://discord.com/users/745687734588276776/">Discord</a></p>
+
 
     </article>
+    <br>
+    <br>
+    
+
+
 </section>
 
 
